# vxbeamer

./: .gitignore  AGENTS.md  Dockerfile  README.md  mise.toml  package.json  pitchfork.toml  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.changeset/: config.json  eight-news-care.md  fair-bobcats-poke.md  free-carrots-fetch.md  swipe-and-drag-improvements.md
.claude/: settings.local.json
.github/workflows/: deploy.yml  desktop-tauri-build.yml  desktop.yml  e2e.yml  publish.yml  reusable-desktop.yml  reusable-docker.yml
apps/backend/: CHANGELOG.md  package.json  tsconfig.json  vite.config.ts
apps/backend/src/: auth.test.ts  auth.ts  events.test.ts  events.ts  server.ts  store.test.ts  store.ts  transcript.test.ts  transcript.ts
apps/desktop/: CHANGELOG.md  README.md  index.html  package.json  vite.config.ts
apps/desktop/scripts/: prepare-web-assets.mjs  run-website-dev.mjs
apps/desktop/src/: App.css  App.test.ts  App.tsx  relativeTime.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/website/: CHANGELOG.md  index.html  package.json  vite.config.ts
apps/website/public/: manifest.json
apps/website/src/: App.tsx  audio.test.ts  audio.ts  desktop.ts  main.ts  main.tsx  oidc.test.ts  oidc.ts  store.test.ts  store.ts  style.css
docs/adr/: 0001-record-architecture-decisions.md
e2e/: recording.spec.ts  support.ts
scripts/: generate-stats-svg.js
(+10 files in other folders)
