[package]
name = "desktop"
version = "0.1.0"
description = "vxbeamer desktop swipe listener"
authors = ["dtinth"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
arboard = "3.6.1"
enigo = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = [] }
