[package]
name = "desktop"
version = "0.0.0"
description = "vxbeamer desktop"
authors = ["dtinth"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
enigo = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
